@@ -1,3 +1,9 @@
+2023-12-19T12:11:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7261609812 # 4376
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2943 / 0 2945 / +0 +2
+
 2023-12-19T08:08:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7259036140 # 4375
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-19
